Fix gx-modal refresh (#265)
* Fix Header Row Pattern implementation.

We must not change the flex-direction of the canvas and table cells.

* Fix/gx-modal not showing on UI refresh.

issue: 96790

--- a/src/components/table-cell/table-cell.scss
+++ b/src/components/table-cell/table-cell.scss
@@ -9,7 +9,7 @@ gx-table-cell {
   overflow: auto;
   @include containerCell();
 
-  flex-direction: column; // Required for header row pattern marker
+  flex-direction: row; // Do not change flex-direction. All alignments will break
 
   // Used when autoGrow = false in the gx-textblock and gx-edit controls to
   // ensure the content does not overflows
